--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<java.version>17</java.version>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<sonar.organization>Wa2n84</sonar.organization>
-		<sonar.projectKey>wa2n84</sonar.projectKey>
+		<sonar.projectKey>Wa2n84_SitodoAW-BSIM</sonar.projectKey>
 		<sonar-maven-plugin.version>3.9.1.2184</sonar-maven-plugin.version>
 		<!-- Serenity & Cucumber-related configuration properties -->
 		<serenity.version>4.0.27</serenity.version>
